<resources>
    <string name="app_name">ColorGame</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_start_menu">HELLO START MENUUUU!!!!</string>

    <string name="title_activity_main">main</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enterUserNameString">Enter a user name</string>
    <string name="startGameString">Start new game</string>
    <string name="startMenuNewGame">Start new game</string>
    <string name="startMenuJoinGame">Join existing game</string>
    <string name="sessionIdHint">Enter session id</string>
    <string name="enterUsernameHint">Enter username here...</string>
    <string name="captureImageButton">Capture</string>
    <string name="joinedSessionExplanation">You have connected to the session! Please enter a username to join the lobby</string>
    <string name="confirmUsernameButton">Confirm Username</string>
    <string name="joinGameButton">Join Game</string>
    <string name="roundSummary">Round Summary</string>
    <string name="startNewRoundButton">Start new round!</string>
    <string name="playersInLobbyLabel">Players in lobby:</string>
    <string name="exitGameButton">Exit game</string>
</resources>
