<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="progark.gruppe13.colorgame.Start_menu">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joinedSessionExplanation"
            android:layout_centerHorizontal="true" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/abc_text_size_large_material" android:textAlignment="center"
            android:paddingTop="50dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/enterUsernameEdit"
            android:inputType="text"
            android:hint="@string/enterUsernameHint" android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterUsernameEdit"
        android:id="@+id/buttonConfirmUsername"
        android:text="@string/confirmUsernameButton"/>

</RelativeLayout>
