<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="progark.gruppe13.colorgame.Start_menu">

    <!-- TODO: Update blank fragment layout -->


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startNewRoundButton"
            android:text="@string/startNewRoundButton"

            android:layout_above="@+id/buttonExitGame" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginBottom="10dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonExitGame"
            android:text="@string/exitGameButton"
            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roundSummary"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/scoreList"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

</RelativeLayout>
